--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "emailjs": "^4.0.1",
+    "framer-motion": "6.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.9",
     "swiper": "^9.0.5",
     "web-vitals": "^2.1.0"
   },
