--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "6.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-favicon": "^1.0.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.9",
     "swiper": "^9.0.5",
